[package]
name = "aardwolf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rle"
crate-type = ["cdylib"]
path = 'src/rle2.rs'

[dependencies]
lazy_static = "1.4.0"
pyo3 = { version = "0.16.5", features = ["extension-module"] }
byteorder = "^1.3"
bufstream = "0.1"