[package]
name = "rlers"
edition = "2021"
version = "0.0.1"
authors = ["Sylvain Peyrefitte <citronneur@gmail.com>", "Tamas Jos"]
description = "rust RLE decoder with Python bindings"
repository = ""
readme = ""
keywords = ["rdp", "security", "network", "windows"]
categories = ["network"]
license = "MIT"
documentation = ""

[lib]
name = "rlers"
crate-type = ["cdylib"]
path = "src/rle.rs"

[dependencies]
pyo3 = { version = "0.23.5", features = ["abi3"] }
byteorder = "1.4.3"